installed dependency express

--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
