--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "A Node.js RESTful API for the client helper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Merve Kabakci, Lara Hosseini",
   "license": "ISC",
