--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.17"
   }
