--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.17"
+    "mongoose": "^5.9.17",
+    "nodemailer": "^6.4.8"
   }
 }
